--- a/index.html
+++ b/index.html
@@ -1,12 +1,34 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="vi">
   <head>
     <meta charset="UTF-8" />
     <title>Đang chuyển hướng...</title>
-    <meta http-equiv="refresh" content="0; url=https://s.shopee.vn/3LEXW9cvAH" />
+
+    <!-- Google tag (gtag.js) – GA4 -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-4J7LFH0XTC"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      // Gửi thông tin tracking vào GA4
+      gtag('config', 'G-4J7LFH0XTC', {
+        page_path: window.location.pathname + window.location.search
+      });
+
+      // Gửi sự kiện custom: redirect_to_shopee
+      gtag('event', 'redirect_to_shopee', {
+        event_category: 'engagement',
+        event_label: window.location.href
+      });
+
+      // Redirect sau 0.5 giây
+      setTimeout(function () {
+        window.location.href = "https://s.shopee.vn/3LEXW9cvAH";
+      }, 500);
+    </script>
   </head>
   <body>
-    <p>Đang chuyển sang Shopee... vui lòng đợi vài giây.</p>
+    <p>Đang chuyển sang Shopee... Vui lòng chờ trong giây lát.</p>
   </body>
 </html>
