--- a/dashboard.html
+++ b/dashboard.html
@@ -1,107 +1,70 @@
-
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-  <meta charset="UTF-8" />
-  <title>📊 Dashboard Shopee Redirect</title>
-  <link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.min.css" />
+  <meta charset="UTF-8">
+  <title>Dashboard Clicks</title>
+  <link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.min.css">
   <style>
-    body { font-family: Arial, sans-serif; padding: 20px; background: #f9f9f9; }
-    h1 { margin-bottom: 10px; }
-    .metrics { display: flex; gap: 20px; margin-bottom: 20px; }
-    .card {
-      background: #fff;
-      padding: 15px 20px;
-      border-radius: 8px;
-      box-shadow: 0 1px 4px rgba(0,0,0,0.1);
-      flex: 1;
-    }
-    table { width: 100%; border-collapse: collapse; background: #fff; margin-top: 20px; }
-    th, td { padding: 8px 12px; border: 1px solid #ddd; font-size: 13px; }
-    th { background: #eee; }
-    canvas { margin-top: 30px; }
+    body { font-family: Arial, sans-serif; padding: 20px; background: #f5f5f5; }
+    table { width: 100%; }
+    h2 { margin-bottom: 20px; }
+    .valid { color: green; }
+    .invalid { color: red; }
   </style>
 </head>
 <body>
-  <h1>📈 Dashboard Click Affiliate – Shopee</h1>
-
-  <div class="metrics">
-    <div class="card">
-      <h3 id="totalClicks">Tổng Click: ...</h3>
-    </div>
-    <div class="card">
-      <h3 id="todayClicks">Click Hôm Nay: ...</h3>
-    </div>
-  </div>
-
-  <canvas id="clickChart" height="100"></canvas>
-
-  <h3 style="margin-top:40px">📋 Chi tiết Click</h3>
-  <table id="clickTable">
+  <h2>📊 Bảng Click Shopee</h2>
+  <table id="clicksTable" class="display">
     <thead>
       <tr>
-        <th>Thời gian</th>
-        <th>SubID</th>
-        <th>ZoneID</th>
-        <th>IP</th>
-        <th>Thiết bị</th>
+        <th>🕒 Thời gian</th>
+        <th>🆔 SubID</th>
+        <th>🌐 ZoneID</th>
+        <th>📍 IP</th>
+        <th>📱 Thiết bị</th>
+        <th>🗺 Quốc gia</th>
+        <th>💻 OS</th>
+        <th>📡 Carrier</th>
+        <th>📌 Trạng thái</th>
       </tr>
     </thead>
-    <tbody></tbody>
+    <tbody id="clicksBody">
+      <!-- dữ liệu sẽ được đổ vào đây -->
+    </tbody>
   </table>
 
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
   <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
   <script>
-    async function loadStats() {
-      const res = await fetch('/stats');
-      const data = await res.json();
+    async function loadClicks() {
+      try {
+        const res = await fetch('/clicks.json');
+        const data = await res.json();
 
-      let today = new Date().toISOString().slice(0, 10);
-      let total = data.length;
-      let todayCount = 0;
-      let hourlyMap = {};
+        const tbody = document.getElementById('clicksBody');
+        data.forEach(click => {
+          const row = document.createElement('tr');
+          row.innerHTML = `
+            <td>${new Date(click.time).toLocaleString('vi-VN')}</td>
+            <td>${click.subid}</td>
+            <td>${click.zoneid}</td>
+            <td>${click.ip}</td>
+            <td>${click.device || click.ua}</td>
+            <td>${click.country}</td>
+            <td>${click.os}</td>
+            <td>${click.carrier || '-'}</td>
+            <td class="${click.status}">${click.status}</td>
+          `;
+          tbody.appendChild(row);
+        });
 
-      const rows = data.map(item => {
-        const t = new Date(item.time);
-        const timeStr = t.toLocaleString();
-        const hour = t.getHours();
-        if (item.time.startsWith(today)) todayCount++;
-        hourlyMap[hour] = (hourlyMap[hour] || 0) + 1;
-
-        return `
-          <tr>
-            <td>${timeStr}</td>
-            <td>${item.subid}</td>
-            <td>${item.zoneid}</td>
-            <td>${item.ip}</td>
-            <td>${item.ua.slice(0, 40)}...</td>
-          </tr>
-        `;
-      });
-
-      $('#totalClicks').text('Tổng Click: ' + total);
-      $('#todayClicks').text('Click Hôm Nay: ' + todayCount);
-      $('#clickTable tbody').html(rows.join(''));
-      $('#clickTable').DataTable();
-
-      const ctx = document.getElementById('clickChart').getContext('2d');
-      new Chart(ctx, {
-        type: 'bar',
-        data: {
-          labels: Object.keys(hourlyMap).map(h => h + ':00'),
-          datasets: [{
-            label: 'Click theo giờ hôm nay',
-            data: Object.values(hourlyMap),
-            backgroundColor: '#36a2eb'
-          }]
-        },
-        options: { responsive: true, scales: { y: { beginAtZero: true } } }
-      });
+        $('#clicksTable').DataTable();
+      } catch (err) {
+        console.error('❌ Không tải được dữ liệu:', err);
+      }
     }
 
-    loadStats();
+    loadClicks();
   </script>
 </body>
 </html>
