update new link aff

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   // Chờ 1500ms rồi mới redirect
   setTimeout(function () {
-    window.location.href = "https://s.shopee.vn/3LEXW9cvAH";
+    window.location.href = "https://shorten.asia/qPubSBTa";
   }, 1500);
 </script>
 
