--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   // Chờ 1500ms rồi mới redirect
   setTimeout(function () {
-    window.location.href = "https://shorten.asia/qPubSBTa";
+    window.location.href = "https://tinyurl.com/278f5qqo";
   }, 1500);
 </script>
 
